# pm

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile
.claude/: ralph-loop.local.md  settings.local.json
backend/: AGENTS.md  auth.py  db.py  main.py  models.py  pyproject.toml
backend/public/: index.html
backend/tests/: conftest.py  test_ai_live.py  test_api.py
docs/: code_review.md  schema.json  schema.md
frontend/: AGENTS.md  playwright.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: AISidebar.tsx  AdminPanel.tsx  BoardSelector.tsx  CardModal.test.tsx  CardModal.tsx  ChangePasswordForm.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginPage.test.tsx  LoginPage.tsx  MyWorkView.tsx  NewCardForm.tsx  SearchModal.tsx
frontend/src/lib/: api.ts  auth.test.ts  auth.ts  kanban.ts
frontend/tests/: auth.spec.ts  board.spec.ts  kanban.spec.ts
scripts/: start.ps1  start.sh  stop.ps1  stop.sh
