[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.1",
  "uvicorn[standard]>=0.23.0",
  "python-dotenv>=1.0.0",
  "bcrypt>=4.0.0",
  "itsdangerous>=2.1.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
